--- a/templates/product.html
+++ b/templates/product.html
@@ -13,7 +13,7 @@
         <!-- Product Details -->
         <div class="col-md-6">
             <h2>Product Title</h2>
-            <p><strong>Price: Rs 1000.00</strong></p>
+            <p class="fs-6"><strong>Price: Rs 1000.00</strong></p>
 
             <!-- Quantity and Add to Cart -->
             <form>
