--- a/templates/header.html
+++ b/templates/header.html
@@ -14,6 +14,9 @@
                     </div>
                     {% else %}
                     <div class="col-auto">
+                        <a href="{{ url_for('cart')}}">Cart ({% if 'cart' in session: %}{{ session.get('cart') | length }}{% else %}0{% endif %})</a>
+                    </div>
+                    <div class="col-auto">
                         <a href="{{ url_for('login')}}">Login</a>
                     </div>
                     {% endif %}
