--- a/templates/product.html
+++ b/templates/product.html
@@ -4,7 +4,18 @@
 
 {% block content %}
 <div class="container mt-5">
+    {% with messages = get_flashed_messages() %}
+   `         {% if messages %}
+                <ul class="flashes">
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}`
     <div class="row">
+
+
         <!-- Product Image -->
         <div class="col-md-6">
             <img src="{{ url_for('static', filename=product.image_url) }}" alt="{{ product.name }}" class="img-fluid">
@@ -13,7 +24,7 @@
         <!-- Product Details -->
         <div class="col-md-6">
             <h2>{{ product.name }}</h2>
-            <p class="fs-6"><strong>Price: Rs {{ product.price }}</strong></p>
+            <p class="fs-6"><strong>Price: $ {{ product.price }}</strong></p>
 
             <!-- Quantity and Add to Cart -->
             <form action="{{ url_for('add_to_cart', product_id=product.id) }}" method="POST">
