--- a/templates/cart.html
+++ b/templates/cart.html
@@ -5,12 +5,27 @@
 {% block content %}
 <div class="container mt-5">
     <h2>Your Shopping Cart</h2>
+    {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="flashes">
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
     <div class="row">
         {% for item in products %}
-            <div class="col-md-12">
-                <h5>{{ item.product.name }} (Quantity: {{ item.quantity }})</h5>
-                <p>Price: Rs {{ item.product.price }}</p>
-                <a href="{{ url_for('remove_from_cart', product_id=item.product.id) }}" class="btn btn-danger">Remove</a>
+            <div class="row">
+                <div class="col-md-7">
+                    <h5><a href="{{ url_for('product', id=item.procuct.id) }}">{{ item.procuct.name }}</a> (Quantity: {{ item.quantity }})</h5>
+                </div>
+                <div class="col-md-3">
+                    <p>Price: Rs {{ item.procuct.price }}</p>
+                </div>
+                <div class="col-md-2">
+                    <a href="{{ url_for('remove_from_cart', product_id=item.procuct.id) }}" class="btn btn-danger">Remove</a>
+                </div>
             </div>
         {% endfor %}
     </div>
