--- a/templates/index.html
+++ b/templates/index.html
@@ -9,51 +9,52 @@
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
+                {% for category in categories %}
                 <div class="col">
                     <div class="card shadow-sm">
                         <img class="bd-placeholder-img card-img-top"
-                             src="{{ url_for('static', filename='images/books.jpeg') }}" width="100%" height="225"
+                             src="{{ url_for('static', filename=category.image_url) }}" width="100%" height="225"
                              role="img" aria-label="Placeholder: Thumbnail"/>
                         <div class="card-body">
-                            <h3>Books</h3>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <h3>{{ category.name }}</h3>
+                            <p class="card-text">{{ category.description}}</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <button type="button" class="btn btn-primary w-100">View</button>
+                                <a href="{{ url_for('category', id=category.id) }}" class="btn btn-primary w-100">View</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img class="bd-placeholder-img card-img-top"
-                             src="{{ url_for('static', filename='images/Merlin.jpeg') }}" width="100%" height="225"
-                             role="img" aria-label="Placeholder: Thumbnail"/>
-                        <div class="card-body">
-                            <h3>Tv</h3>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <button type="button" class="btn btn-primary w-100">View</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img class="bd-placeholder-img card-img-top"
-                             src="{{ url_for('static', filename='images/funtoy2.jpg') }}" width="100%" height="225"
-                             role="img" aria-label="Placeholder: Thumbnail"/>
-                        <div class="card-body">
-                            <h3>Fun Items</h3>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <button type="button" class="btn btn-primary w-100">View</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
+<!--                <div class="col">-->
+<!--                    <div class="card shadow-sm">-->
+<!--                        <img class="bd-placeholder-img card-img-top"-->
+<!--                             src="{{ url_for('static', filename='images/Merlin.jpeg') }}" width="100%" height="225"-->
+<!--                             role="img" aria-label="Placeholder: Thumbnail"/>-->
+<!--                        <div class="card-body">-->
+<!--                            <h3>Tv</h3>-->
+<!--                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to-->
+<!--                                additional content. This content is a little bit longer.</p>-->
+<!--                            <div class="d-flex justify-content-between align-items-center">-->
+<!--                                <button type="button" class="btn btn-primary w-100">View</button>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col">-->
+<!--                    <div class="card shadow-sm">-->
+<!--                        <img class="bd-placeholder-img card-img-top"-->
+<!--                             src="{{ url_for('static', filename='images/funtoy2.jpg') }}" width="100%" height="225"-->
+<!--                             role="img" aria-label="Placeholder: Thumbnail"/>-->
+<!--                        <div class="card-body">-->
+<!--                            <h3>Fun Items</h3>-->
+<!--                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to-->
+<!--                                additional content. This content is a little bit longer.</p>-->
+<!--                            <div class="d-flex justify-content-between align-items-center">-->
+<!--                                <button type="button" class="btn btn-primary w-100">View</button>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
             </div>
         </div>
