--- a/templates/product.html
+++ b/templates/product.html
@@ -5,14 +5,14 @@
 {% block content %}
 <div class="container mt-5">
     {% with messages = get_flashed_messages() %}
-   `         {% if messages %}
+            {% if messages %}
                 <ul class="flashes">
                     {% for message in messages %}
                         <li>{{ message }}</li>
                     {% endfor %}
                 </ul>
             {% endif %}
-        {% endwith %}`
+        {% endwith %}
     <div class="row">
 
 
