--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,8 +4,9 @@
             <div class="col-lg-6 col-md-12 mb-4">
                 <h5 class="text-uppercase">Marlin's Beard Store</h5>
                 <p>
-                    <a href="#" class="text-reset">Home</a> |
-                    <a href="#" class="text-reset">Categories</a>
+                    <a href="{{ url_for('home') }}" class="text-reset">Home</a> |
+                    <a href="{{ url_for('shop') }}" class="text-reset">Categories</a>
+
                 </p>
             </div>
             <div class="col-lg-6 col-md-12 mb-4">
