--- a/templates/header.html
+++ b/templates/header.html
@@ -47,9 +47,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                     </li>
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="">Categories</a>-->
-<!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('shop') }}">Shop</a>
+                    </li>
 <!--                    <li class="nav-item">-->
 <!--                        <a class="nav-link" href="/contact">Contact</a>-->
 <!--                    </li>-->
