--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,7 +5,7 @@
                 <h5 class="text-uppercase">Marlin's Beard Store</h5>
                 <p>
                     <a href="{{ url_for('home') }}" class="text-reset">Home</a> |
-                    <a href="{{ url_for('shop') }}" class="text-reset">Categories</a>
+                    <a href="{{ url_for('shop') }}" class="text-reset">Shop</a>
 
                 </p>
             </div>
