--- a/templates/base.html
+++ b/templates/base.html
@@ -26,5 +26,9 @@
     {% include 'footer.html' %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
+
+    {% block js %}
+    {% endblock %}
 </body>
 </html>
