order placement , adding orderitems and displaying confirmation with full details

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -16,21 +16,27 @@
     {% endwith %}
     <div class="row">
 
-        {% for item in products %}
+        {% if not products %}
         <div class="row">
-            <div class="col-md-7">
-                <h5><a href="{{ url_for('product', id=item.product.id) }}">{{ item.product.name }}</a> (Quantity: {{
-                    item.quantity }})</h5>
-            </div>
-            <div class="col-md-3">
-                <p>Price: Rs {{ item.product.price }}</p>
-            </div>
-            <div class="col-md-2">
-                <a href="{{ url_for('remove_from_cart', product_id=item.product.id) }}"
-                   class="btn btn-danger">Remove</a>
-            </div>
+            <p>No items in the cart.</p>
         </div>
-        {% endfor %}
+        {% else %}
+            {% for item in products %}
+            <div class="row">
+                <div class="col-md-7">
+                    <h5><a href="{{ url_for('product', id=item.product.id) }}">{{ item.product.name }}</a> (Quantity: {{
+                        item.quantity }})</h5>
+                </div>
+                <div class="col-md-3">
+                    <p>Price: Rs {{ item.product.price }}</p>
+                </div>
+                <div class="col-md-2">
+                    <a href="{{ url_for('remove_from_cart', product_id=item.product.id) }}"
+                       class="btn btn-danger">Remove</a>
+                </div>
+            </div>
+            {% endfor %}
+        {% endif %}
 
         <div class="row">
             <div class="col-md-7">
@@ -45,7 +51,7 @@
                         <input type="hidden" id="amount" name="amount" value="{{ tot_amount }}">
                         <input type="hidden" name="process" value="no" />
                     </div>
-                    <button type="submit" class="btn btn-warning">Checkout</button>
+                    {% if tot_amount > 0 %}<button type="submit" class="btn btn-warning">Checkout</button>{% endif %}
                 </form>
             </div>
         </div>
